@@ -302,6 +302,7 @@ DRIVERNV(hardbdyg)      //6803      03/87 Hardbody (German)
 DRIVERNV(prtyanim)      //6803-0H01:05/87 Party Animal
 DRIVERNV(prtyanig)      //6803      05/87 Party Animal (German)
 DRIVERNV(hvymetal)      //6803-0H03:08/87 Heavy Metal Meltdown
+DRIVERNV(hvymetag)      //6803      08/87 Heavy Metal Meltdown (German)
 DRIVERNV(dungdrag)      //6803-0H06:10/87 Dungeons & Dragons
 DRIVERNV(esclwrld)      //6803-0H05:12/87 Escape from the Lost World
 DRIVERNV(esclwrlg)      //6803      12/87 Escape from the Lost World (German)
@@ -2835,12 +2836,13 @@ DRIVER(nbaf,22)         //          05/97 B NBA Fastbreak (2.2)
 DRIVER(nbaf,23)         //          06/97 B NBA Fastbreak (2.3)
 DRIVER(nbaf,31)         //          09/97 B NBA Fastbreak (3.1, Sound S3.0)
 DRIVER(nbaf,31a)        //          09/97 B NBA Fastbreak (3.1, Sound S1.0)
-DRIVER(mm,05)           //WPC-559:  06/97 W Medieval Madness (0.5)
+DRIVER(mm,05)           //WPC-559:  06/97 W Medieval Madness (0.5 Prototype)
 DRIVER(mm,10)           //          07/97 W Medieval Madness (1.0)
-DRIVER(mm,10u)          //          07/97 W Medieval Madness (1.0 Ultrapin)
-DRIVER(mm,109)          //          06/99 W Medieval Madness (1.09, Home version)
-DRIVER(mm,109b)         //                  Medieval Madness (1.09B, Home version Coin Play)
-DRIVER(mm,109c)         //                  Medieval Madness (1.09C, Home version w/ profanity speech)
+DRIVER(mm,10u)          //          ??/06 W Medieval Madness (1.0 Ultrapin)
+DRIVER(mm,10pfx)        //          10/18 W Medieval Madness (1.0 Pinball FX)
+DRIVER(mm,109)          //          06/99 W Medieval Madness (1.09 Home version)
+DRIVER(mm,109b)         //                  Medieval Madness (1.09B Home version Coin Play)
+DRIVER(mm,109c)         //                  Medieval Madness (1.09C Home version w/ profanity speech)
 DRIVER(cv,10)           //WPC-562:  10/97 B Cirqus Voltaire (1.0)
 DRIVER(cv,11)           //          11/97 B Cirqus Voltaire (1.1)
 DRIVER(cv,13)           //          04/98 B Cirqus Voltaire (1.3)
