@@ -14,6 +14,7 @@ Addams Family, The L-5 (competition MOD)
 Clash, The (unofficial MOD of Rock Encore)
 Congo 1.1 with DCS-Sound rev. 1.0
 Diner PA-0 (Prototype), LF-2 (French)
+Heavy Metal Meltdown (German)
 Jack*Bot 0.4A (Prototype)
 
 
